<resources>
    <string name="app_name">Device Protector</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--功能名称-->
    <string name="app_manager">App Manager</string>
    <string name="app_cpu_cooler">CPU Cooler</string>
    <string name="app_junk_cleaner">Junk Cleaner</string>
    <string name="app_battery_saver">Battery Saver</string>
    <string name="app_notification_manager">Notice Manager</string>
    <string name="app_apps_protector">Apps Protector</string>
    <string name="app_network_monitoring">Traffic Manager</string>
    <string name="app_smart_wifi">Smart WiFi</string>
    <string name="update">Update</string>
    <string name="feedback">Feedback</string>
    <string name="comment">Comment</string>
    <string name="about_us">About Us</string>

    <!--其他-->
    <string name="start">Start</string>


</resources>
